--- a/store-shose/app-config.json
+++ b/store-shose/app-config.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "ZMP ECOMMERCE STORE",
+    "title": "Store Wind",
     "headerColor": "",
     "textColor": "white",
     "statusBarColor": "#EF1724",
