update mini app solutions

--- a/mini-app-solution-service/app-config.json
+++ b/mini-app-solution-service/app-config.json
@@ -1,18 +1,25 @@
+
 {
   "app": {
-    "title": "Shop Wind",
-    "headerTitle": "Shop Wind",
+    "title": "Wind Shop",
     "headerColor": "#ffa53d",
-    "textColor": "white",
+    "textColor": "black",
     "statusBarColor": "#ffa53d",
-    "leftButton": "back",
-    "statusBar": "normal",
-    "actionBarHidden": false,
+    "leftButton": "none",
+    "statusBar": "transparent",
+    "selfControlLoading": false,
     "hideAndroidBottomNavigationBar": false,
-    "hideIOSSafeAreaBottom": false
+    "hideIOSSafeAreaBottom": false,
+    "actionBarHidden": true
   },
   "debug": false,
   "listCSS": [],
   "listSyncJS": [],
-  "listAsyncJS": []
+  "listAsyncJS": [],
+  "template": {
+    "primaryColor": "#006af5",
+    "prefixCurrencySymbol": false,
+    "currencySymbol": "đ",
+    "headerLogo": ""
+  }
 }
