update custom header loading 80%

--- a/mini-app-solution-service/app-config.json
+++ b/mini-app-solution-service/app-config.json
@@ -2,8 +2,8 @@
 {
   "app": {
     "title": "Wind Shop",
-    "headerColor": "#ffa53d",
-    "textColor": "black",
+    "headerColor": "",
+    "textColor": "#ffffff",
     "statusBarColor": "#ffa53d",
     "leftButton": "none",
     "statusBar": "transparent",
