--- a/shop-nike/app-config.json
+++ b/shop-nike/app-config.json
@@ -2,7 +2,7 @@
   "app": {
     "title": "Wind Lập Trình",
     "headerColor": "",
-    "textColor": "#005B96",
+    "textColor": "white",
     "statusBarColor": "#000000",
     "leftButton": "none",
     "statusBar": "normal",
