--- a/shop-nike/package.json
+++ b/shop-nike/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
+    "html-react-parser": "^5.1.16",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
