--- a/apo-digicontact/app-config.json
+++ b/apo-digicontact/app-config.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "HoangAnh DigiContact",
+    "title": "APO English",
     "headerColor": "",
     "textColor": "white",
     "statusBarColor": "#8861bb",
