uupdate func get course and student by course

--- a/wind-lap-trinh/app-diem-danh/app-config.json
+++ b/wind-lap-trinh/app-diem-danh/app-config.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "HoangAnh DigiContact",
+    "title": "iLeader DigiContact",
     "headerColor": "",
     "textColor": "white",
     "statusBarColor": "#8861bb",
